# mns3.0

./: .gitignore  CMakeCache.txt  README.md
src/: CMakeLists.txt
src/builderbot_testing/: CMakeLists.txt
src/builderbot_testing/test_00_image_scripts/: copy_boot.sh
src/builderbot_testing/test_01_differential_drive/: builderbot.in.lua  vns.in.argos  vns_hw.in.argos
src/builderbot_testing/test_02_camera/: CMakeLists.txt  builderbot.in.lua  vns_hw.in.argos
src/builderbot_testing/test_03_lift/: CMakeLists.txt  vns.in.argos  vns_hw.in.argos
src/builderbot_testing/test_03_list/: builderbot.in.lua
src/builderbot_testing/test_04_aim/: builderbot.in.lua  vns.in.argos
src/builderbot_testing/test_05_approach/: CMakeLists.txt  builderbot.in.lua  vns.in.argos  vns_hw.in.argos
src/builderbot_testing/test_06_01_supervisor_communication/: builderbot.in.lua  drone.in.lua  pipuck.in.lua  vns.in.argos
src/builderbot_testing/test_06_02_vns/: CMakeLists.txt  builderbot.in.lua  vns.in.argos
src/builderbot_testing/test_06_03_pipuck_builderbot_vns/: builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  morphology.lua  pipuck.in.lua  vns.in.argos
src/builderbot_testing/test_06_supervisor_communication/: builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  morphology.lua  pipuck.in.lua  vns.in.argos
src/builderbot_testing/test_07_learner/: builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  morphology.lua  pipuck.in.lua  vns.in.argos
src/builderbot_testing/test_08_pipuck_push/: builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  morphology.lua  pipuck.in.lua  vns.in.argos
src/builderbot_testing/test_09_selective_recruitment/: CMakeLists.txt  builderbot.in.lua  drone.in.lua  morphology1.lua  pipuck.in.lua  vns.in.argos
src/builderbot_testing/test_10_consensus/: builderbot.in.lua  drone.in.lua  morphology1.lua  morphology2.lua  pipuck.in.lua  vns.in.argos
src/core/api/: APIParameters.lua  apiParameters.lua  builderbotAPI.lua  commonAPI.lua  droneAPI.lua  droneRealistSimulator.lua  pipuckAPI.lua
src/core/utils/: AlphaPairs.lua  BehaviorTree.lua  DeepCopy.lua  DynamicBehaviorTree.lua  Logger.lua  Message.lua  MinCostFlowNetwork.lua  RecruitLogger.lua  Transform.lua
src/core/vns/: Allocator.lua  Assigner.lua  Avoider.lua  BrainKeeper.lua  CollectiveSensor.lua  Connector.lua  Driver.lua  DroneConnectKeeper.lua  DroneConnector.lua  DroneConnector_old_backup.lua  IntersectionDetector.lua  Learner.lua  Neuron.lua  Parameters.lua  PipuckConnector.lua  Scale.lua  ScaleManager.lua  SensorUpdater.lua  Spreader.lua  Stabilizer.lua  TrussReferencer.lua  VNS.lua
src/experiments/: CMakeLists.txt
src/experiments/exp_01_formation/: CMakeLists.txt  drone.in.lua  morphology2.lua  morphology_12.lua  morphology_4.lua  morphology_8.lua  run.in.py  vns_template.in.argos
src/experiments/exp_02_3Dgates/: drone.in.lua  morphology_12_tri.lua  run.in.py
src/experiments/exp_02_race_track/: CMakeLists.txt  drone.in.lua  morphology_12.lua  morphology_12_tri.lua  morphology_2.lua  morphology_20.lua  morphology_20_toSplit.lua  morphology_4.lua  run.in.py  vns_template.in.argos
src/experiments/exp_03_scalability/: drone.in.lua  morphologyGenerateChain.lua  morphologyGenerateTetrahedron.lua  run.in.py  vns_template.in.argos
src/experiments/exp_03_split_and_merge/: drone.in.lua  morphology_20_toSplit.lua  run.in.py  vns_template.in.argos
src/experiments/exp_04_lightshow/: drone.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_04_speed/: drone.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_05_lightshow_fault_tolerance/: CMakeLists.txt  drone.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_05_race_track/: drone.in.lua  morphology_12.lua  morphology_12_rec.lua  morphology_12_tri.lua  morphology_2.lua  morphology_20_toSplit.lua  morphology_4.lua  morphology_8.lua  run.in.py  vns_template.in.argos
src/experiments/exp_06_formation_transfer/: CMakeLists.txt  CustomizedDriver.lua  drone.in.lua  run.in.py
src/experiments/exp_06_scalability/: CMakeLists.txt  drone.in.lua  morphologyGenerateChain.lua  morphologyGenerateCube.lua  morphologyGenerateTetrahedron.lua  morphologyGenerator.lua  morphology_8.lua  run.in.py  vns_template.in.argos
src/experiments/exp_07_acceleration/: CMakeLists.txt  drone.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_07_lightshow/: CMakeLists.txt  drone.in.lua  morphologyGenerateCube.lua  morphologyGenerateLittleMan.lua  morphologyGenerateMan.lua  morphologyGenerateScreen.lua  run.in.py
src/experiments/exp_07_single_drone_reference/: drone.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_08_fault_tolerance/: CMakeLists.txt  drone.in.lua  run.in.py  vns_template.in.argos
src/experiments/exp_08_truss/: drone.in.lua  run.in.py  trussGenerator.lua  trussGenerator_backup.lua
src/experiments/exp_08_truss_2/: CMakeLists.txt  drone.in.lua  man.lua  run.in.py  trussGenerator.lua
src/experiments/exp_11_builderbot_scenario_1/: CMakeLists.txt  builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  pipuck.in.lua  run.in.py
src/experiments/exp_12_builderbot_scenario_2/: CMakeLists.txt  builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  pipuck.in.lua  run.in.py
src/experiments/exp_13_builderbot_scenario_3/: generate_hw_argos.in.py  pipuck.in.lua  run.in.py
src/experiments/exp_14_builderbot_scenario_4/: drone.in.lua  run.in.py
src/experiments/exp_21_builderbot_scenario_1_large_simulation/: CMakeLists.txt  builderbot.in.lua  drone.in.lua  generate_hw_argos.in.py  pipuck.in.lua  (+1 more)
src/extensions/: my_loop_functions.cpp  my_loop_functions.h  replay_loop_functions.cpp  replay_loop_functions.h
src/hw_testing/: CMakeLists.txt
src/qtopengl_extensions/: my_qtopengl_user_functions.cpp  my_qtopengl_user_functions.h  pipiuck_ext_model_generator.sh  qtopengl_pipuck_ext_models.h
src/scripts/: CMakeLists.txt  createArgosScenario.py  drawData.py  drawLines.in.py  drawTrackLogs.py  librun_threads.sh  replay.in.py
src/testing/: CMakeLists.txt
src/testing_hw/: CMakeLists.txt
(+383 files in other folders)
