add_subdirectory(test_01_differential_drive)
add_subdirectory(test_02_camera)
add_subdirectory(test_03_lift)
add_subdirectory(test_04_aim)
add_subdirectory(test_05_approach)
add_subdirectory(test_06_01_supervisor_communication)
add_subdirectory(test_06_02_vns)
add_subdirectory(test_06_03_pipuck_builderbot_vns)
add_subdirectory(test_07_learner)
add_subdirectory(test_08_pipuck_push)
add_subdirectory(test_09_selective_recruitment)
add_subdirectory(test_10_consensus)