add_subdirectory(exp_01_formation)
add_subdirectory(exp_02_3Dgates)
add_subdirectory(exp_03_split_and_merge)
add_subdirectory(exp_04_speed)
add_subdirectory(exp_05_race_track)
add_subdirectory(exp_06_scalability)
add_subdirectory(exp_07_lightshow)
add_subdirectory(exp_08_truss)
add_subdirectory(exp_08_truss_2)
