add_subdirectory(exp_01_formation)
add_subdirectory(exp_02_race_track)
add_subdirectory(exp_03_scalability)
add_subdirectory(exp_04_lightshow)
add_subdirectory(exp_05_lightshow_fault_tolerance)
add_subdirectory(exp_06_formation_transfer)

add_subdirectory(exp_11_builderbot_scenario_1)
add_subdirectory(exp_12_builderbot_scenario_2)
add_subdirectory(exp_13_builderbot_scenario_3)
add_subdirectory(exp_14_builderbot_scenario_4)

add_subdirectory(exp_21_builderbot_scenario_1_large_simulation)
add_subdirectory(exp_22_builderbot_scenario_2_large_simulation)
add_subdirectory(exp_23_builderbot_scenario_3_large_simulation)
add_subdirectory(exp_24_builderbot_scenario_4_large_simulation)
