add_subdirectory(test_00_environment)
add_subdirectory(test_001_drone_speed)
add_subdirectory(test_01_droneapi)
add_subdirectory(test_02_dronemns)
add_subdirectory(test_03_2Dmodemns)
add_subdirectory(test_04_2Dbuilderbot)
add_subdirectory(test_05_2Dbuilderbotmns)
add_subdirectory(test_06_3DdroneObstacles)
add_subdirectory(test_07_chain)

add_subdirectory(test_11_formation)
add_subdirectory(test_21_scalability)