add_subdirectory(test_00_environment)
add_subdirectory(test_001_drone_speed)
add_subdirectory(test_01_droneapi)
add_subdirectory(test_02_dronemns)
add_subdirectory(test_03_2Dmodemns)
add_subdirectory(test_04_2Dbuilderbot)
add_subdirectory(test_05_2Dbuilderbotmns)
add_subdirectory(test_06_3DdroneObstacles)
add_subdirectory(test_07_chain)

add_subdirectory(test_11_formation)
add_subdirectory(test_12_formation_transfer)
add_subdirectory(test_21_scalability)

add_subdirectory(test_31_learner)
add_subdirectory(test_32_learner_inter_robots)

add_subdirectory(test_40_multithreads)

add_subdirectory(test_50_truss_reference)
add_subdirectory(test_51_truss)
add_subdirectory(test_52_truss_2)

add_subdirectory(test_60_3Dgates)
add_subdirectory(test_61_split_and_merge)
add_subdirectory(test_62_speed)
add_subdirectory(test_63_fault_tolerance)